# releng-packer-action

./: .pre-commit-config.yaml  ACTION_IMPLEMENTATION.md  ACTION_README.md  CHECKLIST.md  COMPLIANCE.md  CONVERSION_SUMMARY.md  DOCUMENTATION_UPDATES.md  GERRIT_MVP_SUMMARY.md  GERRIT_TRIGGER_SUMMARY.md  GERRIT_WORKFLOW_SELECTION.md  IMPROVEMENTS_SUMMARY.md  PACKER_BASTION_MVP.md  PROJECT_OVERVIEW.txt  QUICK_FIX.md  QUICK_REFERENCE.md  README.md  SETUP_AND_TEST.md  SHELLCHECK_FIX_SUMMARY.md  SOLUTION_SUMMARY.md  SUMMARY.md  TAG_SELF_OWNERSHIP_EXPLAINED.md  TAILSCALE_FIX.md  action.yaml  file-list.txt  oauth_summary.md  pyproject.toml  setup.sh  test-templates.sh
.github/workflows/: packer-vexxhost-bastion-build.yaml  test-action.yaml  test-tailscale-setup-build-minimal.yaml  test.yaml
docs/: ARCHITECTURE.md  BASTION_CLOUD_INIT.md  GERRIT_GITHUB_INTEGRATION.md  GERRIT_INTEGRATION.md  QUICK_START.md  TAILSCALE_SETUP.md  TROUBLESHOOTING.md
examples/: README.md
examples/provision/: baseline.sh
examples/templates/: builder.pkr.hcl
examples/vars/: ubuntu-22.04.pkrvars.hcl
examples/workflows/: gerrit-packer-merge.yaml  gerrit-packer-verify.yaml  matrix-build-example.yaml  use-action-example.yaml
templates/: bastion-cloud-init.yaml
tests/: README.md  conftest.py  test_action_yaml.py  test_integration.py  test_shell_scripts.py  test_templates.py  test_workflows.py
